# myinterpretator

./: .gitignore  CMakeLists.txt  readme.md
include/: common.hpp  hart_t.hpp  instruction_t.hpp  memory_t.hpp
sources/: .gitignore  common.cpp  hart_t.cpp  instruction_t.cpp  main.cpp  memory_t.cpp  testgen.cpp
tests/frmt/: test1  test2  test3
tests/unfrmt/: test1.txt  test2.txt  test3.txt
